--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -298,6 +298,7 @@ input[type="submit"], button {
     .stacked ul.selector-chooser {
         padding: 0 2px;
         transform: none;
+        margin: 10px auto;
     }
 
     .stacked .selector-chooser li {
@@ -610,6 +611,7 @@ input[type="submit"], button {
         height: 30px;
         padding: 0 2px;
         transform: none;
+        margin: auto;
     }
 
     .selector ul.selector-chooser li {
