Fixed accessibility for list_editable widgets in Admin changelist.
* Added `id` attributes to column headers (`col-<field>`) and row headers (`row-<pk>`) in `change_list_results.html`.
* Added `scope="row"` to row headers.
* Updated `items_for_result` in `admin_list.py` to inject `aria-labelledby` attributes into editable widgets, associating them with their corresponding row and column headers.
* Updated existing tests in `admin_changelist` to match the new HTML structure.
* Added `ListEditableAccessibilityTests` to verify accessibility attributes on editable fields.

--- a/django/contrib/admin/templates/admin/change_list_results.html
+++ b/django/contrib/admin/templates/admin/change_list_results.html
@@ -10,7 +10,7 @@
 <thead>
 <tr>
 {% for header in result_headers %}
-<th scope="col"{{ header.class_attrib }}>
+<th scope="col" id="{{ header.col_id }}" {{ header.class_attrib }}>
    {% if header.sortable and header.sort_priority > 0 %}
        <div class="sortoptions">
          <a class="sortremove" href="{{ header.url_remove }}" title="{% translate "Remove from sorting" %}"></a>
