--- a/tests/admin_views/templates/admin/admin_views/article/change_list_results.html
+++ b/tests/admin_views/templates/admin/admin_views/article/change_list_results.html
@@ -10,7 +10,7 @@
 <thead>
 <tr>
 {% for header in result_headers %}
-<th scope="col"{{ header.class_attrib }}>
+<th scope="col" id="{{ header.col_id }}" {{ header.class_attrib }}></th>
    {% if header.sortable %}
      {% if header.sort_priority > 0 %}
        <div class="sortoptions">
