Refs #36788 -- Added missing CSS selector for fieldsets in the admin.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -30,7 +30,8 @@ form .form-row p {
     flex-wrap: wrap;
 }
 
-.form-multiline > div {
+.form-multiline > div,
+.form-multiline > fieldset {
     padding-bottom: 10px;
 }
 
