--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -824,18 +824,25 @@ a.deletelink:focus, a.deletelink:hover {
     text-decoration: none;
 }
 
+/* TITLES */
+
+.titles-and-tools {
+    display: flex;
+}
+
+.titles {
+    flex-grow: 1;
+}
+
 /* OBJECT TOOLS */
 
 .object-tools {
     padding: 0;
-    overflow: hidden;
-    text-align: right;
     margin: 0 0 15px;
 }
 
 .object-tools li {
     display: inline-block;
-    height: auto;
 }
 
 .object-tools li + li {
