--- a/django/contrib/admin/templates/admin/pagination.html
+++ b/django/contrib/admin/templates/admin/pagination.html
@@ -1,7 +1,7 @@
 {% load admin_list %}
 {% load i18n %}
 <nav class="paginator" aria-labelledby="pagination">
-    <h2 id="pagination" class="visually-hidden">{% blocktranslate with name=cl.opts.verbose_name_plural %}Pagination {{ name }}{% endblocktranslate %}</h2>
+    <h2 id="pagination" class="visually-hidden">{% translate 'Pagination' %}</h2>
     {% if pagination_required %}
     <ul>
     {% for i in page_range %}
