Fixed #36914 -- Fixed background-color to also apply to select options in TabularInline.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -18,6 +18,10 @@
     vertical-align: 0;
 }
 
+.form-row select option:checked {
+    background-color: var(--selected-row);
+}
+
 form .form-row p {
     padding-left: 0;
 }
@@ -150,7 +154,6 @@ form .aligned div.help:last-child {
 }
 
 form .aligned select option:checked {
-    background-color: var(--selected-row);
     color: var(--body-fg);
 }
 
